LR wihtout SK-Learn

--- a/Linear_Regression/Simple_Linear.ipynb
+++ b/Linear_Regression/Simple_Linear.ipynb
@@ -1533,7 +1533,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 52,
    "id": "2d1a4252-eafc-4ce3-8547-851995ab8c9c",
    "metadata": {},
    "outputs": [
@@ -1543,14 +1543,14 @@
        "array([[3.89111601]])"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# y = mx + b\n",
-    "# b is offset here it means if m iws 0\n",
+    "# b is offset here it means if mx is 0 than the value will be equal to b\n",
     "m*8.58 + b "
    ]
   },
@@ -1574,14 +1574,6 @@
    "source": [
     "m * 10 + b"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4e1dbf39-aa90-41da-b729-69849f09765b",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
